fixed layout issues, removed footer, show map credits

--- a/src/features/common/CopyToClipboard/styles.module.scss
+++ b/src/features/common/CopyToClipboard/styles.module.scss
@@ -2,8 +2,8 @@
 
 .copyButtonContainer {
     cursor: pointer;
-    padding: 10px;
+    padding: 5px 8px;
     > svg {
-        width: 18px;
+        width: 10px;
     }
 }
