--- a/src/features/user/TreeMapper/TreeMapper.module.scss
+++ b/src/features/user/TreeMapper/TreeMapper.module.scss
@@ -179,30 +179,41 @@
   padding-top: 20px;
   grid-row-gap: 20px;
   grid-template-columns: 1fr 1fr;
-  .singleDetail {
+  
+}
+
+.detailsFull {
+  display: grid;
+  padding-top: 20px;
+  grid-row-gap: 20px;
+  grid-template-columns: 1fr;
+}
+
+.singleDetail {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  .title {
+    font-weight: bold;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    .title {
-      font-weight: bold;
+    align-items: center;
+  }
+  a {
+    color: $primaryColor;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  .value {
+    word-break: break-word;
+    padding-right: 20px;
+    display: flex;
+    > span {
+      font-style: italic;
     }
-    a {
-      color: $primaryColor;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .value {
-      word-break: break-word;
-      padding-right: 20px;
-      display: flex;
-      > span {
-        font-style: italic;
-      }
-      > span.link {
-        font-style: italic;
-        text-decoration: underline;
-        cursor: pointer;
-      }
+    > span.link {
+      font-style: italic;
+      text-decoration: underline;
+      cursor: pointer;
     }
   }
 }
