--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -203,9 +203,9 @@ video {
 //   margin: 0 10px 40px 0 !important;
 // }
 
-.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl-attrib-inner {
-  display: none;
-}
+// .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl-attrib-inner {
+//   display: none;
+// }
 
 @font-face {
   font-family: 'Pampers Script';
@@ -287,9 +287,9 @@ button {
   padding-left: 40px;
 }
 
-.mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
-  margin: 0 20px 25px 0;
-}
+// .mapboxgl-ctrl-bottom-right .mapboxgl-ctrl {
+//   margin: 0 20px 25px 0;
+// }
 
 @font-face {
   font-family: 'HarmoniaSansPro';
